--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <button type="submit" class="btn">Send Message</button>
     </form>
     <div class="socials">
-      <a href="www.linkedin.com/in/yasmine-mns-356b55388">LinkedIn</a>
+      <a href="https://www.linkedin.com/in/yasmine-mns-356b55388">LinkedIn</a>
       <a href="https://github.com/YasmineMansourii">GitHub</a>
       
     </div>
@@ -95,3 +95,4 @@
   <script src="js/theme.js"></script>
 </body>
 </html>
+
