--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <img src="e-shop.png" alt="Project 1">
         <h3>Project 1</h3>
         <p>A cool project built using HTML, CSS, and JS.</p>
-        <a href="#" class="btn">View</a>
+        <a href="http://glowingeshop.42web.io/Glowing-Copy3/" class="btn">View</a>
       </div>
       <div class="project-card">
         <img src="e-learning-web.png" alt="Project 2">
@@ -95,5 +95,6 @@
   <script src="js/theme.js"></script>
 </body>
 </html>
+
 
 
