Fix HTML formatting and update project links

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <a href="http://glowingeshop.42web.io/Glowing-Copy3/" class="btn">View</a>
       </div>
       <div class="project-card">
-        <img src="e-learning-web.png" alt="Project 2">
+        <img src="http://glowingeshop.42web.io/e-learning/" alt="Project 2">
         <h3>Project 2</h3>
         <p>Another creative project with animations.</p>
         <a href="#" class="btn">View</a>
@@ -95,6 +95,7 @@
   <script src="js/theme.js"></script>
 </body>
 </html>
+
 
 
 
