Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <h2>Projects</h2>
     <div class="project-container">
       <div class="project-card">
-        <img src="e-shop.png" alt="Project 1">
+        <img src="img.png" alt="Project 1">
         <h3>Project 1</h3>
         <p>A cool project built using HTML, CSS, and JS.</p>
         <a href="http://glowingeshop.42web.io/Glowing-Copy3/" class="btn">View</a>
@@ -95,6 +95,7 @@
   <script src="js/theme.js"></script>
 </body>
 </html>
+
 
 
 
