Update project images in index.html
Replaced image source for Project 1 and updated the image for Project 2.

--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
     <h2>Projects</h2>
     <div class="project-container">
       <div class="project-card">
-        <img src="img.png" alt="Project 1">
+        <img src="e-shop.png" alt="Project 1">
         <h3>Project 1</h3>
         <p>A cool project built using HTML, CSS, and JS.</p>
         <a href="http://glowingeshop.42web.io/Glowing-Copy3/" class="btn">View</a>
       </div>
       <div class="project-card">
-        <img src="http://glowingeshop.42web.io/e-learning/" alt="Project 2">
+        <img src="img.png" alt="Project 2">
         <h3>Project 2</h3>
         <p>Another creative project with animations.</p>
-        <a href="#" class="btn">View</a>
+        <a href="http://glowingeshop.42web.io/e-learning/" class="btn">View</a>
       </div>
     </div>
   </section>
@@ -95,6 +95,7 @@
   <script src="js/theme.js"></script>
 </body>
 </html>
+
 
 
 
