--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
         <p>Another creative project with animations.</p>
         <a href="http://glowingeshop.42web.io/e-learning/" class="btn">View</a>
       </div>
+      <div class="project-card">
+       <img src="flower.png" alt="Blender Project">
+       <h3>Project 3</h3>
+       <p>Simple Blender animation project</p>
+       <a href="blender.html" class="btn">View</a>
+      </div>
     </div>
   </section>
 
@@ -95,6 +101,7 @@
   <script src="js/theme.js"></script>
 </body>
 </html>
+
 
 
 
